[workspace]
members = ["cubefx-engine", "cubefx-eval"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
cubefx = { version = "0.1.0", path = "cubefx" }
cubecl = { version = "0.10.0-pre.1", features = ["test-runtime"] }
cubecl-common = { version = "0.10.0-pre.1" }
cubek-test-utils = { version = "0.2.0-pre.1" }